# flutter_vulkan

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  flutter_vulkan_jni.cpp
android/src/main/kotlin/com/example/flutter_vulkan/: FlutterVulkanPlugin.kt
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/flutter_vulkan_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: edit_shader.dart  main.dart  shadertoy.dart  states.dart
example/lib/controls/: controls.dart  shader_buttons.dart  texture_chooser.dart  texture_sizes.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_vulkan.podspec
ios/Classes/: FlutterVulkanPlugin.swift  VulkanFlutterTexture.swift
ios/Classes/include/: flutter_vulkan_bridge.h
ios/Frameworks/MoltenVK.xcframework/: Info.plist
ios/Frameworks/shaderc_combined.xcframework/: Info.plist
ios/src/: common.h  ffi.cpp  renderer.cpp  sampler2d.cpp  shader.cpp  simulator_stubs.cpp  uniform_queue.cpp  vulkan_context.cpp  vulkan_context.h
lib/: flutter_vulkan.dart
lib/src/: flutter_vulkan_api.dart  flutter_vulkan_ffi.dart  flutter_vulkan_method_channel.dart  flutter_vulkan_platform_interface.dart  flutter_vulkan_web_plugin.dart  vulkan_controller.dart  vulkan_controller_native.dart  vulkan_renderer.dart  vulkan_texture.dart  vulkan_texture_native.dart
lib/src/web/: vulkan_controller_web.dart  vulkan_texture_web.dart  wasm_renderer.dart  webgl_renderer.dart
linux/: CMakeLists.txt  fl_my_texture.cc  flutter_vulkan_plugin.cc
linux/include/: fl_my_texture.h
linux/include/flutter_vulkan/: flutter_vulkan_plugin.h
macos/: flutter_vulkan.podspec
macos/Classes/: FlutterVulkanPlugin.swift  VulkanFlutterTexture.swift
macos/Classes/include/: flutter_vulkan_bridge.h
macos/src/: common.h  ffi.cpp  renderer.cpp  renderer.h  sampler2d.cpp  sampler2d.h  shader.cpp  shader.h  vulkan_context.cpp
rust/: Cargo.toml  build_wasm.sh
rust/src/: ffi.rs  gpu_context.rs  lib.rs  renderer.rs  sampler2d.rs  shader_pipeline.rs  uniform_queue.rs  wasm.rs
rust/tests/: render.rs
src/: common.h  ffi.cpp  ffi.h  renderer.cpp  renderer.h  sampler2d.cpp  shader.cpp  shader.h  uniform_queue.cpp  uniform_queue.h  vulkan_context.cpp  vulkan_context.h
windows/: CMakeLists.txt  flutter_vulkan_plugin.cpp  flutter_vulkan_plugin.def
windows/include/flutter_vulkan/: flutter_vulkan_plugin.h
