[package]
name = "flutter_vulkan_plugin"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
name = "flutter_vulkan_native"
crate-type = ["cdylib", "staticlib"]

[dependencies]
wgpu = "24"
naga = { version = "24", features = ["glsl-in", "spv-out", "wgsl-out"] }
bytemuck = "1"
parking_lot = "0.12"
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
pollster = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window", "Document", "HtmlCanvasElement", "Performance",
    "Element",
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4"
console_log = "1"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 2
lto = "thin"
strip = true
